--- a/programming/bootstrap.html
+++ b/programming/bootstrap.html
@@ -5,20 +5,10 @@
 	<title>Bootstrap</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
-  <link rel="stylesheet" href="../CSS/leonardasf1.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 </head>
 <body>
-	<header>
-     <div id="headerMenu">
-         
-     </div>   
-    </header>
 
-    <script src="../JS/leoscript.js" async></script>
-    
-	<nav></nav>
 	<main>
 		<section>
 			<article>
@@ -31,7 +21,9 @@
         popper.min.js <br>
         bootstrap.min.js <br>
         <a href="https://webref.ru/layout/bootstrap">bootstrap</a>
-        <br><br>
+        <br>
+        <a href="primery/landy.html" target="_blank">Landy</a><br>
+        <br>
       </ul>
       <div class="mini-article-meta">
         <div class="mini-article-byline">
@@ -74,13 +66,13 @@
                     <label for="state">State</label>
                     <select id="state" class="form-control">
                         <option selected disabled>Choose...</option>
-                        <option>Киев</option>
-                        <option>Харьков</option>
-                        <option>Одесса</option>
-                        <option>Донецк</option>
-                        <option>Запорожье</option>
-                        <option>Львов</option>
-                        <option>Тернополь</option>
+                        <option>Moscow</option>
+                        <option>London</option>
+                        <option>New York</option>
+                        <option>Paris</option>
+                        <option>Tokio</option>
+                        <option>Bejing</option>
+                        <option>Hong-Kong</option>
                         <option>...</option>
                     </select>
                 </div>
@@ -102,6 +94,5 @@
 			</article>
 		</section>
 	</main>
-	<footer></footer>
 </body>
 </html>
