--- a/programming/index.html
+++ b/programming/index.html
@@ -10,26 +10,13 @@
 
     <style>
 
-.primery {
-    display: flex;
-    flex-wrap: wrap;
-}
-.primery a{
-    margin: 3px;
-    flex: 1 1 auto;
-    padding: 5px;
-    border-radius: 50px;
-    box-shadow: 0 0 1rem #000;
-}
+h2 {margin-top: 0px}
+
 .python {
     background: linear-gradient(135deg ,#3b709c 40%, #fad149 60%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
-#python:hover {
-    text-shadow: none;
-}
-h2 {margin-top: 0px}
 
     </style>
 
@@ -67,10 +54,6 @@ h2 {margin-top: 0px}
         <a href="css.html">
             <img src="../icons/css1.svg">
             <span style="color: blue">CSS</span>
-        </a>
-        <a href="bootstrap.html">
-            <img src="https://getbootstrap.com/docs/4.3/assets/img/favicons/apple-touch-icon.png">
-            <span style="color: #563d7c">Bootstrap</span>
         </a>
         <a href="javascript.html">
             <img src="../icons/javascript.svg">
@@ -290,18 +273,13 @@ create .gitignore /tmp
     <a href="https://www.sublimemerge.com/"><img src="https://www.sublimemerge.com/favicon.ico" alt="sublimemerge"> Sublime Merge</a></li>
 <li><img src="https://nodejs.org/static/images/favicons/favicon-16x16.png" alt=""> <a href="https://nodejs.org/en/">Node.js</a></li>
 <li><a href="https://github.com/tehcookies/bundlers-comparison">Bundlers</a>: <a href="https://www.youtube.com/watch?v=Tg8IVbvturM">Webpack</a>, Parcel, Rollup</li>
-<li><a href="https://ru.reactjs.org/docs/static-type-checking.html">Статическая типизация:</a> TypeScript <a href="https://youtu.be/bSoIeNo-aiw">(ITVDN)</a> , Flow</li>
-<hr>js-frameworks: <a href="https://cdnjs.com">cdnjs.com</a>
-<li>Next.js / Gatsby.js / Nest.js <img src="https://mootools.net/images/favicon/mootools.png" alt=""> <a href="https://mootools.net/">mootools</a></li>
+<li>DevOps:
+    docker, CI/CD
+</li>
     </ul>
 </div>
 
 <div>
-    <h2>Java</h2>
-    <ul>
-        <a href="http://www.jetbrains.com/idea/"><img src="http://www.jetbrains.com/favicon-16x16.png" alt=""> IntelliJ IDEA</a><br>
-        <a href="https://www.oracle.com/technetwork/java/javase/downloads/index.html">Java Development Kit</a><br>
-    </ul>
     <h2>Terminal</h2>
     <pre>
 cd E:  // переходим на нужный диск
@@ -335,19 +313,25 @@ module.exports = {
 </div>
 
 <div class="img32">
-    <a href="https://dart.dev/"><img src="https://dart.dev/assets/shared/dart/icon/64.png" alt=""> Dart , Flutter</a><br>
-    <a href="https://www.rust-lang.org/"><img src="https://www.rust-lang.org/static/images/favicon-32x32.png" alt=""> Rust</a><br>
-    <a href="https://www.haskell.org/"><img src="https://www.haskell.org/img/favicon.ico" alt=""> Haskell</a><br>
-    <a href="https://golang.org/"><img src="https://golang.org/favicon.ico"> Golang</a><br>
+    <a href="https://dart.dev/"><img src="https://dart.dev/assets/shared/dart/icon/64.png" alt="Dart"> Dart , Flutter</a><br>
+    <a href="https://www.typescriptlang.org/"><img src="https://www.typescriptlang.org/assets/images/icons/favicon-32x32.png" alt=""> TypeScript </a> <a href="https://youtu.be/bSoIeNo-aiw"> </a><br>
+    <a href="https://flow.org/"><img src="https://flow.org/static/favicon.png" alt="flow"> Flow</a> <a href="https://ru.reactjs.org/docs/static-type-checking.html">ru.reactjs.org</a>
+    <hr>
+    <a href="https://www.rust-lang.org/"><img src="https://www.rust-lang.org/static/images/favicon-32x32.png" alt="Rust"> Rust</a><br>
+    <a href="https://www.haskell.org/"><img src="https://www.haskell.org/img/favicon.ico" alt="Haskell"> Haskell</a><br>
+    <a href="https://golang.org/"><img src="https://golang.org/favicon.ico" alt="Golang"> Golang</a><br>
+    <h3>Java</h3>
+    <ul>
+        <a href="http://www.jetbrains.com/idea/">IntelliJ IDEA</a><br>
+        <a href="https://www.oracle.com/technetwork/java/javase/downloads/index.html">Java Development Kit</a><br>
+    </ul>
 </div>
 
 <div>
     <ul>
-    <li>docker</li>
     <li>browserslist</li>
     <li>WebAuthn / WebAssembly</li>
     <li>unit-тесты , e2e-тесты , Mocha</li>
-    <li>CI/CD</li>
     <li>скрамы, канбаны, стендапы, парное программирование</li>
     <li><a href="https://vk.com/doc41637949_513701117">code complete Стива Макконнела. 2010</a></li>
     <a href="https://htmlacademy.ru"><img src="https://htmlacademy.ru/favicon.svg"> htmlacademy.ru</a><span style="color: rgba(0,0,0,0);">e5744e2</span><br>
@@ -368,32 +352,38 @@ module.exports = {
     <li><a href="http://citforum.ru/">citforum.ru</a></li>
     <li><a href="https://highlightjs.org/">highlightjs</a></li>
 <li><img src="https://www.sonarsource.com/favicon.ico" alt=""> <a href="https://www.sonarsource.com/products/codeanalyzers/sonarjs.html">sonarJS</a> - анализатор кода</li>
+
+        <a href="bootstrap.html" target="_blank">
+            <img src="https://getbootstrap.com/docs/4.3/assets/img/favicons/apple-touch-icon.png">
+            <span style="color: #563d7c">Bootstrap</span>
+        </a>
     </ul>
 </div>
 
-</div>
-<br><br><br>
-    <article class="primery">
-        <a href="https://codepen.io/leonardasf1/pen/QegKyX/">video-playerJS</a>
-        <a href="primery/hcs-1.html">hcs-1</a>
-        <a href="primery/hcs-2.html">hcs-2</a>
-        <a href="primery/html5-css3-starter.html">Landy</a>
-        <a href="primery/headers.html">шапки</a>
-        <a href="primery/radius.html">radius</a>
-        <a href="primery/csstricks.html">csstricks</a>
-        <a href="primery/nitro/">Nitro</a>
-        <a href="primery/skillboxLanding/">skillboxLanding</a>
-        <a href="primery/skillboxFront/">spinner</a>
-        <a href="primery/js4.html">js4</a> 
-        <a href="primery/jsa7-1.html">move-elem1</a> 
-        <a href="https://codepen.io/leonardasf1/pen/LYPyzzx/">Forma</a>
-        <a href="primery/react1.html">react1</a>
-        <a href="primery/DNA/">DNA</a>
+    <div>
+        <a href="https://codepen.io/leonardasf1/pen/QegKyX/">video-playerJS</a><br>
+        <a href="https://codepen.io/leonardasf1/pen/KKKaGjR">hcs-1</a><br>
+        <a href="https://codepen.io/leonardasf1/pen/mddRvRd">hcs-2</a><br>
+        <a href="https://codepen.io/leonardasf1/pen/QWWdeeN">шапки</a><br>
+        <a href="https://codepen.io/leonardasf1/pen/yLLMqvQ">csstricks</a><br>
+        <a href="primery/nitro/" target="_blank">Nitro</a><br>
+        <a href="primery/skillboxLanding/" target="_blank">skillboxLanding</a><br>
+        <a href="https://codepen.io/leonardasf1/pen/XWWMyeQ">spinner</a><br>
+        <a href="https://codepen.io/leonardasf1/pen/JjjWegK">js move slider</a> <br>
+        <a href="https://codepen.io/leonardasf1/pen/mddmeQm">drag-elem</a> <br>
+        <a href="https://codepen.io/leonardasf1/pen/LYPyzzx/">Forma</a><br>
+        <a href="https://codepen.io/leonardasf1/pen/QWWgxYN">react1</a><br>
+        <a href="https://codepen.io/leonardasf1/pen/NWWgzmx">DNA</a><br>
         <hr>
-        <a href="primery/zippy/">Zippy Простой лендинг в PSD.</a>
-        <a href="https://drive.google.com/file/d/1VgH1lyZq_1zCz-YWBZw8Kifx5JTFdwPe/">Интернет-магазин часов. Адаптивный макет в формате Figma</a>
-        <a href="https://yadi.sk/d/vitPq1t5mS7rRQ">Kross. Сайт-портфолио в PSD</a>
-    </article>
+        <a href="https://yadi.sk/d/tk7BjQ9adBx5Hg">Zippy Простой лендинг в PSD.</a><br>
+        <a href="https://drive.google.com/file/d/1VgH1lyZq_1zCz-YWBZw8Kifx5JTFdwPe/">Интернет-магазин часов. Адаптивный макет в формате Figma</a><br>
+        <a href="https://yadi.sk/d/vitPq1t5mS7rRQ">Kross. Сайт-портфолио в PSD</a><br>
+        <a href="https://drive.google.com/file/d/1ByXB1fYHiTXINFROvZ0mYdJpYOgoUsBO/">Лендинг курса по Customer Development. Макет для Figma.</a><br>
+        <a href="https://yadi.sk/d/aQDWvM_2L-wT9w">MilasTask Небольшая страничка-портфолио.</a><br>
+        <a href="https://yadi.sk/d/xO_d7Vg6iQmURw">Peridona Лендинг для серьёзных дел.</a><br>
+    </div>
+</div>
+
 </article>
 
 <footer></footer>
