--- a/programming/index.html
+++ b/programming/index.html
@@ -263,7 +263,7 @@ create .gitignore /tmp
 <li>codEditor:
     <a href="https://code.visualstudio.com/"><img src="https://upload.wikimedia.org/wikipedia/commons/9/9a/Visual_Studio_Code_1.35_icon.svg" title="VS Code"></a>
     <a href="https://notepad-plus-plus.org/"><img src="https://notepad-plus-plus.org/images/logo.svg" title="notepad++"></a>
-    <a href="https://www.jetbrains.com/idea/"><img src="../icons/IntelliJ.svg"></a>
+    <a href="https://www.jetbrains.com/idea/"><img src="../icons/intelliJ.svg"></a>
     <a href="https://www.sublimetext.com"><img src="https://www.sublimetext.com/favicon.ico" title="Sublime Text"></a>
 </li>
     sublimeText: .container>.header(>h1{Hello W})+.content>ul>li*5({item$}) <br>
