import_Img, click>load(page)

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="CSS/leonardasf1.css">
 <style></style>
 
-<script src="JS/base.js" type="module"></script>
+<script src="JS/header.js" async></script>
+<script src="JS/main.js" async></script>
 
 </head>
 
@@ -21,12 +22,8 @@
       </div>
     </div>
 </header>
-
-<div id="links">
-  <a href="https://reactjs.org/"><img src="icons/react.svg" alt="reactjs.org"></a>
-</div>
-
 <content>
+<div id="links"></div>
 <!--    <div style="display: grid; grid-template-columns: repeat(2, 1fr); grid-gap: 20px;">
       <img src="F1_Challenge/1983/1983.jpg">
       <img src="Alpinism/DSC03909.jpg">
