--- a/programming/html.html
+++ b/programming/html.html
@@ -150,10 +150,13 @@ value=""</pre>
 
   <div><MARQUEE loop="1">< MARQUEE> /</MARQUEE></div>
 
-  <a href="#" id="id" target="_blank" title="title" rel="" accesskey="t" type="text/html" download="">a href="#" id="id" target="_blank" title="title" rel="" accesskey="t" type="text/html" download=""</a><br>
+  <a href="#" id="id" target="_blank" title="title" rel="" accesskey="t" type="text/html" download="">a href="#" id="id" target="_blank" title="title" rel="" accesskey="t" type="text/html"</a><br>
   <a href="#" target="_self">target="_self"</a><br>
   <a href="#" target="_top">target="_top"</a> <br>
   <a href="#" target="_parent">target="_parent"</a> <br>
+  hreflang="" <br>
+  download="" <br>
+  ping="" <br>
 <br>
   href="mailto:asd@mail.com?subject=Hellow%20again" <a href="mailto:asd@mail.com?subject=Hellow%20again">написать письмо</a><br>
   href="tel:+72346543867" <a href="tel:+72346543867">+7 234 654 38 67</a><br>
