--- a/programming/index.html
+++ b/programming/index.html
@@ -183,8 +183,8 @@ usage: git [--version] [--help] [-C < path>] [-c < name>=< value>]
 
 These are common Git commands used in various situations: 
 
-    git config —global user.name "John Doe" 
-    git config —global user.email johndoe@example.com
+    git config -—global user.name "John Doe" 
+    git config -—global user.email johndoe@example.com
 
 start a working area (see also: git help tutorial) 
 	git clone url	// Clone a repository into a new directory 
@@ -282,8 +282,8 @@ create .gitignore /tmp
 <div>
     <h2>Terminal</h2>
     <pre>
-cd E:  // переходим на нужный диск
-cd example  // в нужную папку
+cd E:\Users\Projects
+cd "E:\Users\Rust Projects"
 mkdir folder  // создаем папку
 ls  // смотреть содержимое папки
     </pre>
@@ -312,12 +312,26 @@ module.exports = {
     </pre>
 </div>
 
+<div>
+    <img src="https://www.rust-lang.org/static/images/favicon-32x32.png" alt="Rust" height="32px"> <a href="https://www.rust-lang.org/">Rust</a>
+    <a href="https://www.youtube.com/playlist?list=PLQQFvHDqx-V8Qjj-oyga0tYSCKzq5DJQE">Уроки</a><br>
+    <pre>
+fn main() {
+    println!("Hello {}", varName); // в консоль
+}
+let varName = "World!"; // неизменяемая переменная
+let mut varName2 = 5; // изменяемая переменная
+const VAR_NAME: u32 = 100_000; // константа: тип данных
+    </pre>
+    
+</div>
+
 <div class="img32">
     <a href="https://dart.dev/"><img src="https://dart.dev/assets/shared/dart/icon/64.png" alt="Dart"> Dart , Flutter</a><br>
     <a href="https://www.typescriptlang.org/"><img src="https://www.typescriptlang.org/assets/images/icons/favicon-32x32.png" alt=""> TypeScript </a> <a href="https://youtu.be/bSoIeNo-aiw"> </a><br>
     <a href="https://flow.org/"><img src="https://flow.org/static/favicon.png" alt="flow"> Flow</a> <a href="https://ru.reactjs.org/docs/static-type-checking.html">ru.reactjs.org</a>
     <hr>
-    <a href="https://www.rust-lang.org/"><img src="https://www.rust-lang.org/static/images/favicon-32x32.png" alt="Rust"> Rust</a><br>
+
     <a href="https://www.haskell.org/"><img src="https://www.haskell.org/img/favicon.ico" alt="Haskell"> Haskell</a><br>
     <a href="https://golang.org/"><img src="https://golang.org/favicon.ico" alt="Golang"> Golang</a><br>
     <h3>Java</h3>
