--- a/programming/js2.html
+++ b/programming/js2.html
@@ -36,6 +36,7 @@
     <a href="https://developer.mozilla.org/ru/docs/Web/JavaScript/Reference" style="background: none"><img src="https://developer.mozilla.org/static/img/favicon32.7f3da72dcea1.png" alt="mozilla"></a>
     <a href="https://www.ecma-international.org/ecma-262/"><img src="https://www.ecma-international.org/ecma-262/img/favicon.ico" alt="ecma"></a>
     <a href="https://kangax.github.io/compat-table/"><img src="https://kangax.github.io/compat-table/favicon.ico" alt="es6"></a>
+    <a href="http://plnkr.co/"><img src="http://plnkr.co/img/plunker.png" alt="plunker"></a>
     <a href="https://jsfiddle.net/"><img src="http://jsfiddle.net/img/favicon.png" alt="jsfiddle"></a>
     <a href="https://eloquentjavascript.net"><img src="https://eloquentjavascript.net/favicon.ico" alt="EJS"></a>
     <a href="https://skillbox.ru/media/code/javascript_glavnyy_instrument_frontend/"><img src="https://skillbox.ru/favicon.ico" alt="Skillbox"></a>
@@ -474,11 +475,28 @@
 			</code></pre></details></li>
 		<li><details><summary>Date, time</summary>
 			<pre><code class="javascript">
+  new Date();  // при вызове конструктора Date без параметров, создается объект Date отражающий текущую дату и время
+    .setFullYear()
+    .getFullYear()
+    .toGMTString()
+  performance.now() // источники времени
+  process.hrtime()
+  <a href="https://gist.github.com/victor-homyakov/eaecea956d3679cbbec76578ede311fb">"Тяжёлое бремя времени"</a>
 
+  codepen: 
+  <a href="https://codepen.io/leonardasf1/pen/qzeLrz">secundomer</a> 
+  <a href="https://codepen.io/leonardasf1/pen/QXeJJG">time</a>
 			</code></pre></details></li>
 		<li><details><summary>JSON</summary>
       <pre><code class="javascript">
 
+      </code></pre></details></li>
+    <li><details><summary>Binary</summary>
+      <pre><code class="javascript">
+ArrayBuffer бинарные массивы
+TextDecoder , TextEncoder
+Blob
+File , FileReader
       </code></pre></details></li>
 	</ul>
 </div>
@@ -885,7 +903,7 @@
 	</ul>
 </div>
 
-<div>
+<div>Dom
 	<ul>
 		<li><details><summary>DOM</summary>
 			<pre><code class="javascript">
@@ -964,11 +982,50 @@
   селектор.событие = function () {};  тэг onclick="имяФункции();"
   селектор.["событие"] = function () {};
 
-  .addEventListener("событие без on", function(){})  // добавляет событие
-  .removeEventListener("событие без on", function(){}, false);  //  удаление обработчика
+  .addEventListener("событие без on", function(){});  // добавляет событие
+  .addEventListener("event", funcName);
+  .removeEventListener("событие без on", funcName, false);  //  удаление обработчика
 
 	document.attachEvent();  // for IE<=8
-        .dispatchEvent(event)
+          .dispatchEvent(event)
+
+  abort   // прерывание загрузки img
+  animationcancel    
+  animationend
+  blur            // элемент теряет фокус
+  cancel
+  canplay
+  canplaythrough
+  change        // Элемент потерял фокус и его значения с момента получения фокуса изменилось
+  cuechange
+  durationchange
+  ended
+  error             // ощибка при загрузке изображения
+  focus
+  gotpointercapture
+  input
+  invalid
+
+  lostpointercapture
+
+  pause
+  play
+
+  pointercancel
+  pointerdown
+  pointerenter
+  pointerleave
+  pointermove
+  pointerout
+  pointerover
+  pointerup
+
+  reset        // запрос на очистку полей формы
+  resize       // изменение размера окна
+  submit()       // Запрос на передачу данных формы
+  transitioncancel
+  transitionend
+  unhandledrejection  // обработчик ошибок
 
   //Properties
   .bubbles   // Логическое значение, указывающее, вспыло ли событие вверх по DOM или нет.
@@ -1332,13 +1389,69 @@
           .add();
 
 			</code></pre></details></li>
-		<li><details><summary>Fetch</summary>
+		<li>AJAX<ul><details><summary>Fetch</summary>
 			<pre><code class="javascript">
+  let promise = fetch(url, {options});
+  ---
+  let response = await fetch('url');
+  let results = await response.json();
+  alert(results[0].author.login);
+  alert(results.message);
+  ---
+  fetch('url')
+  .then(response => response.json())
+  .then(results => alert(results[0].author.login));
 
+  response.status // код статуса HTTP-запроса, например 200.
+  response.ok // true, если статус ответа в диапазоне 200-299.
+  response.headers  // похожий на Map объект с HTTP-заголовками.
+
+  response.text() // возвращает ответ как обычный текст,
+  response.json() // декодирует ответ в формате JSON,
+  response.formData() // возвращает ответ как объект FormData,
+  response.blob() // возвращает объект как Blob,
+  response.arrayBuffer() // возвращает ответ как ArrayBuffer,
+  response.body // это объект ReadableStream, с помощью которого можно считывать тело запроса по частям. 
+    // использовать только один метод чтения ответа!
+
+  alert(response.headers.get('Content-Type')); // application/json; charset=utf-8
+  // перебрать все заголовки
+  for (let [key, value] of response.headers) {
+    alert(`${key} = ${value}`);
+  }
+  let response = await fetch('/article/fetch/post/user', {
+    method: 'POST',  // метод запроса
+    headers: {  // заголовки запроса
+      'Content-Type': 'application/json;charset=utf-8'
+    },
+    body: JSON.stringify(user)  // тело запроса
+  });
 			</code></pre></details></li>
 		<li><details><summary>FormData</summary>
 			<pre><code class="javascript">
+  formElem.onsubmit = async (e) => {
+    e.preventDefault();
 
+    let response = await fetch('url', {
+      method: 'POST',
+      body: new FormData(formElem)
+    });
+
+    let result = await response.json();
+
+    alert(result.message);
+  };
+
+  formData.append(name, value) – добавляет к объекту поле с именем name и значением value,
+  formData.append(name, blob, fileName)
+  formData.delete(name) – удаляет поле с заданным именем name,
+  formData.get(name) – получает значение поля с именем name,
+  formData.has(name)
+
+    // Список пар ключ/значение
+  for(let [name, value] of formData) {
+    alert(`${name} = ${value}`); // key1=value1, потом key2=value2
+  }
 			</code></pre></details></li>
 		<li><details><summary>XMLTttpRequest</summary>
 			<pre><code class="javascript">
@@ -1392,14 +1505,58 @@
 		<li><details><summary>WebSocket</summary>
 			<pre><code class="javascript">
 
-			</code></pre></details></li>
+			</code></pre></details></li></ul></li>
 		<li><details><summary>Web Components</summary>
 			<pre><code class="javascript">
 
 			</code></pre></details></li>
 		<li><details><summary>RegExp</summary>
 			<pre><code class="javascript">
+  /\d\d\d/
+  var name = new RegExp("\d\d\d");
+  pattern.exec("string") // возвращает результат поиска по шаблону(только 1й, если не задано g)
+  pattern.test("string") // проверяет соответствие с шаблоном
 
+    // Метасимволы.
+  \w // Любой алфавитно-цифровой символ в верхнем и нижнем регистре и символ подчеркивания(тоже самое, что и [a-zA-Z0-9_]).
+  \W // Любой символ не являющийся подчеркиванием и не относящийся к алфавитно-цифровым
+  \s // любой пробельный символ (тоже самое, что [\r\n\f\v\t])
+  \S // Любой не пробельный символ (тоже самое, что [^\r\n\f\v\t])
+  \d // любая цифра (digit)
+  \D // любой не цифровой символ (тоже самое, что [^0-9])
+
+  \v // (вертикальная табуляция)
+  \t // (табуляция)
+  \r // (перевод каретки)
+  \n // (перевод строки)
+  \f // (перевод страницы)
+
+    // Наборы символов
+  [RrGgBb] // Соответствие указанным символам
+  [a-z] // Соответствие символам английского алфавита в нижнем регистре
+  [0-9] // Соответствие указанным цифрам
+  [^0-9] // Соответствие с чем угодно кроме цифр заданного диапазона
+
+    // Квантификатор (Кванторы)
+  + //Один или несколько символов
+  * //ноль и более символов
+  ? //ноль или одно вхождение
+
+    // Интервалы
+  {3} // точное количество совпадений
+  {2,3} // диапазон
+  {3,} // не менее
+  {,3} // не более
+
+    // Якорные символы
+  ^  // Начало строки
+  $  // Конец строки
+  \b // соответствует границе слова
+
+    // Флаги
+  i // выполнение поиска не чувствительного к регистру.
+  g // выполнение глобального поиска.
+  m // многострочный режим.
 			</code></pre></details></li>
 	</ul>
 </div>
